# afanda

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pixi.toml  pyproject.toml  pyrightconfig.json  ruff.toml
scripts/: build_afanda_engines.py  build_engines.py  build_hubert_engine.py  build_renderer_engines.py  download_artifacts.py  generate_offline.py  run_local_stream.py  test_api.py
src/afanda_renderer/: __init__.py  afanda_artifact_manager.py  afanda_motion_generator.py  artifact_manage_basic.py  avatar_loader.py  backgrounds.py  constants.py  frame_sink.py  intro_motion.py  motion_generator.py  pipeline.py  renderer.py  types.py
src/afanda_renderer/api/: app.py  load_balancing.py
src/afanda_renderer/artifact_configs/: __init__.py  v1.py
src/afanda_renderer/components/: __init__.py  alpha_to_luma_lut.npy  face_detection.py  face_landmarks.py  hubert.py  matting.py  pixel_format.py  putback.py  source_crop.py
src/afanda_renderer/models/: __init__.py  afanda.py  appearance_extractor.py  decoder.py  face_detection.py  hubert.py  landmark106.py  landmark203.py  matting.py  motion_extractor.py  stitch.py  warp.py
src/afanda_renderer/runtime/: __init__.py  inference_engine.py  loader.py  onnxrt.py  trt.py
src/afanda_renderer/utils/: __init__.py  asyncio.py  cuda_health.py
src/avaturn_live_streamer/: clocks.py  config.py  constant.py  event_bus.py  events.py  local_stream_cli.py  local_stream_ui.html  runner.py  sdk_events.py  settings.py  types.py
src/avaturn_live_streamer/conversation_engines/: builders.py  cartesia_client.py  (+4 more)
(+28 files in other folders)
