[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afanda-renderer"
version = "0.1.0"
description = "Avaturn live face-renderer pipeline."
requires-python = ">=3.12"
# Runtime dependencies are managed by pixi.toml — this list is left
# empty so an editable install via `pixi install` doesn't fight the
# pixi-resolved environment.
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["afanda_renderer*", "avaturn_live_streamer*"]
